# code-challenge

./: .byebug_history  .gitignore  .overcommit.yml  .rspec  .rspec_status  .rubocop.yml  .ruby-gemset  .ruby-version  Arts.rb  BUILD.md  CODE_OF_CONDUCT.md  Constants.rb  DOCUMENTATION.md  Dockerfile  Gemfile  Guardfile  LICENSE  Makefile  NOTES.md  README.md  Rakefile  SECURITY.md  SOLUTION-README.md  SOLUTION.md  SerpApiHTMLParser_RamyEmam.ipynb  TODO.txt  USAGE.md  Utils.rb  WRITEUP.md  alt.rb  app.js  app.py  app.rb  artparser.rb  artparser_spec.rb  artwork.rb  artwork_scraper.rb  artworks-parser.js  artworks-parser.test.js  artworks.json  (+164 more)
Albrecht_Durer_artworks/: artworks.json
Edouard_Manet_artworks/: artworks.json
Manet_artworks/: artworks.json
Picasso_artworks/: artworks.json
Project/: main.py
Van_Gogh_artworks/: artworks.json
__tests__/: code-challenge.tests.js
answer/: results.json  serpapi-vangoh-inline-images.py
app/: Gemfile  app.rb  application.rb  artwork.rb  build.gradle  errors.rb  extract.rb  extract_items.rb  extractor.rb  fixture.rb  google_carousel_extractor.rb  information_card.rb  knowledge_item.rb  main.rb  scrape_content.rb  setup.rb  utils.rb
arac/: Gemfile  README.md
carousel_parser/: .gitignore  Gemfile  LICENSE.txt  README.md  artwork_struct.rb  carousel_parser.gemspec  parser.rb
challenge/: challenge.rb  html_file_parser.rb  main.py  parser.rb  scrape.py
config/: application.rb  application.yml  boot.rb  cable.yml  config.exs  credentials.yml.enc  routes.rb  selectors.yml
example-webpages/: anthony_horowitz_books_in_order.html  brandon_sanderson_books_in_order.html
files/: Gemfile  Hieronymus Bosch - Google Search.html  New-York-Knicks.json  Roman-Cities.json  Test1-Famous-Boxers.json  Test2-Basketball-Players.json  actors.html  actual-array.json  aivazovsky-paintings.html  array.json  (+249 more)
(+990 files in other folders)
