[tool.poetry]
name = "code-challenge"
version = "0.1.0"
description = ""
authors = ["capricorn <8250820+capricorn@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
beautifulsoup4 = "^4.12.3"
pytest = "^8.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
