Cabal-Version : 2.2
Name          : serp
Version       : 0.1.0
Build-Type    : Simple

executable serp
  default-language : Haskell2010
  hs-source-dirs   : src
  main-is          : Main.hs
  ghc-options      :
    -O
    -Wall
    -Wcompat
    -Widentities
    -Werror=missing-fields
    -Werror=incomplete-patterns

    -fno-warn-missing-home-modules
    -fno-warn-missing-pattern-synonym-signatures

  default-extensions:
    DoAndIfThenElse
    LambdaCase
    OverloadedStrings
    StandaloneDeriving
    DeriveGeneric
    QuasiQuotes

  build-depends: base == 4.*
               , text
               , containers
               , relude
               , scalpel
               , tagsoup
               , aeson
               , aeson-pretty
               , regex
               , split

  mixins: base hiding (Prelude)
        , relude (Relude as Prelude)

